tests/baselines/reference/inheritanceMemberPropertyOverridingProperty.errors.txt
tests/cases/compiler/inheritanceMemberPropertyOverridingProperty.ts(6,5): error TS2612: Property 'x' will overwrite the base property in 'a'. Add a 'declare' modifier or an initializer to avoid this.


==== tests/cases/compiler/inheritanceMemberPropertyOverridingProperty.ts (1 errors) ====
    class a {
        x: () => string;
    }
    
    class b extends a {
        x: () => string;
        ~
!!! error TS2612: Property 'x' will overwrite the base property in 'a'. Add a 'declare' modifier or an initializer to avoid this.
    }